tests/mypy/mypy_synchronized_lock_t1.out
tests/mypy/mypy_synchronized_lock_t1.py:93: error: All overload variants of "synchronized" require at least one argument  [call-overload]
tests/mypy/mypy_synchronized_lock_t1.py:93: note: Possible overload variants:
tests/mypy/mypy_synchronized_lock_t1.py:93: note:     def [_P, _R] synchronized(wrapped: Callable[_P, _R]) -> Callable[_P, _R]
tests/mypy/mypy_synchronized_lock_t1.py:93: note:     def synchronized(wrapped: Any) -> _SynchronizedObject
tests/mypy/mypy_synchronized_lock_t1.py:100: error: Too many arguments for "synchronized_function"  [call-arg]
Found 2 errors in 1 file (checked 1 source file)
